--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:orientation="vertical"
-    tools:context=".views.MainActivity">
+    tools:context=".MainActivity">
 
     <LinearLayout
         android:id="@+id/llBtns"
@@ -80,18 +80,18 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1">
+
         <TextView
             android:id="@+id/tvGetSource"
-            android:onClick="onClick"
-            android:clickable="true"
-            android:padding="10dp"
-            android:gravity="right"
-            android:textSize="18sp"
-            android:text="@string/str_get_source_code"
-            android:textColor="@android:color/holo_blue_dark"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            />
+            android:clickable="true"
+            android:gravity="right"
+            android:onClick="onClick"
+            android:padding="10dp"
+            android:text="@string/str_get_source_code"
+            android:textColor="@android:color/holo_blue_dark"
+            android:textSize="18sp" />
     </RelativeLayout>
 
 
